--- a/css/styles.css
+++ b/css/styles.css
@@ -6,7 +6,9 @@ body {
 a {
     text-decoration: none;
 }
-
+header{
+    border-bottom: 1px solid var(--grey-text);
+}
 .container {
     width: 1200px;
     padding: 0 15px;
@@ -353,11 +355,7 @@ margin-left: 30px;
 }
 
 .cards-title{
-    margin-left: 24px;
-    margin-right: 24px;
-    margin-top: 20px;
-    margin-bottom: 0;
-
+    margin: 0;
     font-size: 18px;
     line-height: 2;
     letter-spacing: 0.06em;
@@ -366,10 +364,7 @@ margin-left: 30px;
 }
 
 .cards-text{
-    margin-left: 24px;
-    margin-right: 24px;
-    margin-bottom: 0;
-    margin-top: 4px;
+    margin: 0;
 
     font-weight: 400;
     font-size: 16px;
@@ -378,3 +373,6 @@ margin-left: 30px;
     color: var(--grey-text);
 } 
 
+.cards-description{
+    margin: 20px 25px;
+}
